# story_deck_tracker

./: .gitignore  README.md
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/app/: alembic.ini  database.py  enums.py  index.html  main.py  settings.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 2025_01_31_0242-b16851339ae2_create_user_table.py  2025_01_31_0320-41b27714be9f_create_author_author_lookup_set_catalog_.py  2025_01_31_0755-ded169f311db_change_the_collection_table_s_primary_.py  2025_02_02_1141-55cabb1eb191_changing_user_id_to_a_uuid.py  2025_02_03_2121-43fc8e27b596_add_collection_condition_default.py  2025_02_06_2304-b5f746086ed1_make_user_id_card_id_and_condition_the_.py
backend/app/api/: main.py
backend/app/api/routers/: artist.py  artist_lookup.py  author.py  author_lookup.py  catalog.py  collection.py  set.py  user.py
backend/app/crud/: artist.py  artist_lookup.py  author.py  author_lookup.py  catalog.py  collection.py  set.py  user.py
backend/app/models/: __init__.py  artist.py  author.py  base.py  catalog.py  inventory.py  user.py
backend/app/schemas/: artist.py  artist_lookup.py  author.py  author_lookup.py  catalog.py  collection.py  set.py  user.py
frontend/: .firebaserc  README.md  cors.json  firebase.json  orval.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
frontend/public/: index.html
frontend/saved-data/: firebase-export-metadata.json
(+38 files in other folders)
